<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TableLayout
        android:layout_height="fill_parent"
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent" >
        	
    		<TableRow>
    		    
    		    <TextView 
        			android:text="@string/exercise"
       				android:layout_height="fill_parent"
        			android:layout_width="fill_parent"
        			android:layout_weight="1" />
    		    <TextView
    		        android:text="@string/hintSet"
    		        android:layout_width="fill_parent"
    		        android:layout_height="fill_parent"
    		        android:layout_weight="1" />
    		    <TextView
    		        android:text="@string/hintRep"
    		        android:layout_width="fill_parent"
    		        android:layout_height="fill_parent"
    		        android:layout_weight="1" />
    		    
    		</TableRow>
    		</TableLayout>
    		<TextView
    		    android:text="@string/placeholder_db"
    		    android:id="@+id/tvSQLinfo"
    		    android:layout_width="fill_parent"
    		    android:layout_height="fill_parent" >
    		    
    		</TextView>
    		
</LinearLayout>
    		
    		   
    		    
    			
    		    

   