<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/carbon" >

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_header"
        android:gravity="center"
        android:textSize="30sp" 
        android:layout_marginTop="48dp"/>

	<TextView 
	    android:id="@+id/tvWelcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/text_welcome"
        android:gravity="center"
        android:textSize="20sp" />

  
    <Button
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:onClick="PullExisting"
        android:text="@string/button_existing_workout" 
        android:id="@+id/bExisting"/>
    
     <Button
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="48dp"
        android:text="@string/button_new_workout" 
        android:id="@+id/bNew"/>
     

</LinearLayout>