<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carbon"
    android:orientation="vertical" >
    

    <ImageButton
        android:id="@+id/imageView1"
        android:layout_width="218dp"
        android:layout_height="218dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:contentDescription="@string/content"
        android:src="@drawable/logo_splash"
        android:background="@android:color/transparent" />
    
  

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/tagline"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/tap_to_start"
        android:textSize="15sp" />

</RelativeLayout>